--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix start && npm run build --prefix start"
+
   },
   "eslintConfig": {
     "extends": [
