--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix start && npm run build --prefix start"
+    "eject": "react-scripts eject"
 
   },
   "eslintConfig": {
