--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.0.3",
+    "serve": "^14.0.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
@@ -24,7 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
   },
   "eslintConfig": {
     "extends": [
